--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "dependencies": {
     "cheerio": "^1.0.0-rc.3",
-    "iconv-lite": "^0.6.2",
-    "request": "^2.88.2"
+    "iconv-lite": "^0.6.2"
   }
 }
